Update _toc.yml add ipywidget test

--- a/_toc.yml
+++ b/_toc.yml
@@ -49,4 +49,5 @@ chapters:
     - file: Markdown/9_3_authors
     - file: Markdown/9_4_quadriga
     - file: Markdown/9_5_impressum
+    - file: Markdown/1000_Widget List
 
