Update _toc.yml 1001

--- a/_toc.yml
+++ b/_toc.yml
@@ -50,4 +50,4 @@ chapters:
     - file: Markdown/9_4_quadriga
     - file: Markdown/9_5_impressum
     - file: Markdown/1000_Widget List
-
+    - file: Markdown/1001_Widget_List
