--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         pip install -r requirements.txt
         pip install ipywidgets
+        pip install scipy
 
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
