--- a/_toc.yml
+++ b/_toc.yml
@@ -51,3 +51,4 @@ chapters:
     - file: Markdown/9_5_impressum
     - file: Markdown/1000_Widget List
     - file: Markdown/1001_Widget_List
+    - file: Markdown/1002_assessment_recherche
