--- a/_toc.yml
+++ b/_toc.yml
@@ -52,3 +52,4 @@ chapters:
     - file: Markdown/1000_Widget List
     - file: Markdown/1001_Widget_List
     - file: Markdown/1002_assessment_recherche
+    - file: Markdown/1003_test
