--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ launch_buttons:
   notebook_interface: jupyterlab # remove if you don't want to use binder
   binderhub_url: https://mybinder.org # remove if you don't want to use binder
   colab_url: https://colab.research.google.com
-  jupyterhub_url: https://dev.jupyterhub.uni-potsdam.de
+  jupyterhub_url: http://nfdik8s-jupyterhub.fokus.fraunhofer.de # https://dev.jupyterhub.uni-potsdam.de
   thebe: true
   
 # Add GitHub buttons to your book
